update｜all.scss｜tab版を追加（未調整）

--- a/src/scss/base/_grid.scss
+++ b/src/scss/base/_grid.scss
@@ -4,6 +4,9 @@
 .col-1 {
     width: $pc-grid;
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -11,6 +14,9 @@
 .col-2 {
     width: calc(#{$pc-grid} * 2 + #{$pc-gutter});
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -18,6 +24,9 @@
 .col-3 {
     width: calc(#{$pc-grid} * 3 + #{$pc-gutter} * 2);
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -25,6 +34,9 @@
 .col-4 {
     width: calc(#{$pc-grid} * 4 + #{$pc-gutter} * 3);
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -32,6 +44,9 @@
 .col-5 {
     width: calc(#{$pc-grid} * 5 + #{$pc-gutter} * 4);
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -39,6 +54,9 @@
 .col-6 {
     width: calc(#{$pc-grid} * 6 + #{$pc-gutter} * 5);
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -46,6 +64,9 @@
 .col-7 {
     width: calc(#{$pc-grid} * 7 + #{$pc-gutter} * 6);
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -53,6 +74,9 @@
 .col-8 {
     width: calc(#{$pc-grid} * 8 + #{$pc-gutter} * 7);
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -60,6 +84,9 @@
 .col-9 {
     width: calc(#{$pc-grid} * 9 + #{$pc-gutter} * 8);
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -67,6 +94,9 @@
 .col-10 {
     width: calc(#{$pc-grid} * 10 + #{$pc-gutter} * 9);
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -74,6 +104,9 @@
 .col-11 {
     width: calc(#{$pc-grid} * 11 + #{$pc-gutter} * 10);
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -81,6 +114,9 @@
 .col-12 {
     width: calc(#{$pc-grid} * 12 + #{$pc-gutter} * 11);
     margin-right: $pc-gutter;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -89,66 +125,99 @@
 //PC用開始位置設計
 .offset-2 {
     margin-left: calc(#{$pc-grid} + #{$pc-gutter});
+    @include mq-tab {
+      margin-left: 0;
+    }
     @include mq-sp {
       margin-left: 0;
     }
 }
 .offset-3 {
     margin-left: calc(#{$pc-grid} * 2 + #{$pc-gutter} * 2);
+    @include mq-tab {
+      margin-left: 0;
+    }
     @include mq-sp {
       margin-left: 0;
     }
 }
 .offset-4 {
     margin-left: calc(#{$pc-grid} * 3 + #{$pc-gutter} * 3);
+    @include mq-tab {
+      margin-left: 0;
+    }
     @include mq-sp {
       margin-left: 0;
     }
 }
 .offset-5 {
     margin-left: calc(#{$pc-grid} * 4 + #{$pc-gutter} * 4);
+    @include mq-tab {
+      margin-left: 0;
+    }
     @include mq-sp {
       margin-left: 0;
     }
 }
 .offset-6{
     margin-left: calc(#{$pc-grid} * 5 + #{$pc-gutter} * 5);
+    @include mq-tab {
+      margin-left: 0;
+    }
     @include mq-sp {
       margin-left: 0;
     }
 }
 .offset-7 {
     margin-left: calc(#{$pc-grid} * 6 + #{$pc-gutter} * 6);
+    @include mq-tab {
+      margin-left: 0;
+    }
     @include mq-sp {
       margin-left: 0;
     }
 }
 .offset-8 {
     margin-left: calc(#{$pc-grid} * 7 + #{$pc-gutter} * 7);
+    @include mq-tab {
+      margin-left: 0;
+    }
     @include mq-sp {
       margin-left: 0;
     }
 }
 .offset-9 {
     margin-left: calc(#{$pc-grid} * 8 + #{$pc-gutter} * 8);
+    @include mq-tab {
+      margin-left: 0;
+    }
     @include mq-sp {
       margin-left: 0;
     }
 }
 .offset-10 {
     margin-left: calc(#{$pc-grid} * 9 + #{$pc-gutter} * 9);
+    @include mq-tab {
+      margin-left: 0;
+    }
     @include mq-sp {
       margin-left: 0;
     }
 }
 .offset-11 {
     margin-left: calc(#{$pc-grid} * 10 + #{$pc-gutter} * 10);
+    @include mq-tab {
+      margin-left: 0;
+    }
     @include mq-sp {
       margin-left: 0;
     }
 }
 .offset-12 {
     margin-left: calc(#{$pc-grid} * 11 + #{$pc-gutter} * 11);
+    @include mq-tab {
+      margin-left: 0;
+    }
     @include mq-sp {
       margin-left: 0;
     }
@@ -167,6 +236,9 @@ style
 }
 .row div:nth-child(odd) {
     background-color: aqua;
+    @include mq-sp {
+      background-color: #f5deb3;
+    }
     @include mq-sp {
       background-color: blue;
     }
