--- a/src/scss/components/common/_article-image.scss
+++ b/src/scss/components/common/_article-image.scss
@@ -2,6 +2,9 @@
 
 .article-image {
   margin-bottom: 80px;
+  @include mq-tab {
+    margin-bottom: 30px;
+  }
   @include mq-sp {
     margin-bottom: 30px;
   }
