--- a/src/scss/components/common/_article-heading.scss
+++ b/src/scss/components/common/_article-heading.scss
@@ -1,24 +1,31 @@
 @charset "utf-8";
 
 .article-heading {
-    @include heading-m--pc;
-    margin-bottom: 80px;
-    position: relative;
-    @include mq-sp {
-      @include heading-m--sp;
-      margin-bottom: 40px;
+  @include heading-m--pc;
+  margin-bottom: 80px;
+  position: relative;
+  @include mq-tab {
+    @include heading-m--sp;
+    margin-bottom: 40px;
+  }
+  @include mq-sp {
+    @include heading-m--sp;
+    margin-bottom: 40px;
+  }
+  &::before {
+    content: '';
+    display: inline-block;
+    width: calc(#{$pc-grid} * 2);
+    height: 1px;
+    background: $dark-green;
+    position: absolute;
+    top: 50%;
+    margin-left: calc( -1 * #{$pc-grid} * 2 - #{$pc-gutter} * 2);
+    @include mq-tab {
+      display: none;
     }
-    &::before {
-      content: '';
-      display: inline-block;
-      width: calc(#{$pc-grid} * 2);
-      height: 1px;
-      background: $dark-green;
-      position: absolute;
-      top: 50%;
-      margin-left: calc( -1 * #{$pc-grid} * 2 - #{$pc-gutter} * 2);
-      @include mq-sp {
-        display: none;
+    @include mq-sp {
+      display: none;
     }
   }
 }
