--- a/src/scss/components/common/_article-left-image.scss
+++ b/src/scss/components/common/_article-left-image.scss
@@ -6,15 +6,25 @@
   margin-bottom: 80px;
   + p {
     margin-top: -40px;
+    @include mq-tab {
+      margin-top: 0px;
+    }
     @include mq-sp {
       margin-top: 0px;
     }
   }
   + .article-heading {
     margin-top: 100px;
+    @include mq-tab {
+      margin-top: 60px;
+    }
     @include mq-sp {
       margin-top: 60px;
     }
+  }
+  @include mq-tab {
+    display: block;
+    margin-bottom: 30px;
   }
   @include mq-sp {
     display: block;
@@ -24,6 +34,10 @@
     margin-right: 30px;
     width : calc(44% - 30px);
     // width: calc(#{$pc-grid} * 3 + #{$pc-gutter} * 3);
+    @include mq-tab {
+      margin-right: 0px;
+      width : 100%;
+    }
     @include mq-sp {
       margin-right: 0px;
       width : 100%;
@@ -36,6 +50,9 @@
   &__image-s-box {
     display: flex;
     width: 100%;
+    @include mq-tab {
+      margin-bottom: 30px;
+    }
     @include mq-sp {
       margin-bottom: 30px;
     }
@@ -49,6 +66,9 @@
   &__text-box {
     width : 56%;
     // width: calc(#{$pc-grid} * 4 + #{$pc-gutter} * 3);
+    @include mq-tab {
+      width : 100%;
+    }
     @include mq-sp {
       width : 100%;
     }
@@ -57,6 +77,10 @@
     width: 100%;
     margin-bottom: 40px;
     @include text-normal--pc;
+    @include mq-tab {
+      @include text-normal--sp;
+      margin-bottom: 30px;
+    }
     @include mq-sp {
       @include text-normal--sp;
       margin-bottom: 30px;
