--- a/src/scss/components/common/_article-right-image.scss
+++ b/src/scss/components/common/_article-right-image.scss
@@ -5,15 +5,25 @@
   margin-bottom: 80px;
   + p {
     margin-top: -40px;
+    @include mq-tab {
+      margin-top: 0px;
+    }
     @include mq-sp {
       margin-top: 0px;
     }
   }
   + .article-heading {
     margin-top: 100px;
+    @include mq-tab {
+      margin-top: 60px;
+    }
     @include mq-sp {
       margin-top: 60px;
     }
+  }
+  @include mq-tab {
+    display: block;
+    margin-bottom: 30px;
   }
   @include mq-sp {
     display: block;
@@ -21,6 +31,10 @@
   }
   &__text-box {
     width : 56%;
+    @include mq-tab {
+      width : 100%;
+      margin-bottom: 30px;
+    }
     @include mq-sp {
       width : 100%;
       margin-bottom: 30px;
@@ -30,6 +44,10 @@
     width: 100%;
     margin-bottom: 40px;
     @include text-normal--pc;
+    @include mq-tab {
+      @include text-normal--sp;
+      margin-bottom: 30px;
+    }
     @include mq-sp {
       @include text-normal--sp;
       margin-bottom: 30px;
@@ -38,6 +56,10 @@
   &__image-box {
     width : calc(44% - 30px);
     margin-left: 30px;
+    @include mq-tab {
+      width : 100%;
+      margin-left: 0px;
+    }
     @include mq-sp {
       width : 100%;
       margin-left: 0px;
@@ -50,6 +72,9 @@
   &__image-s-box {
     display: flex;
     width: 100%;
+    @include mq-tab {
+      margin-bottom: 30px;
+    }
     @include mq-sp {
       margin-bottom: 30px;
     }
