--- a/src/scss/components/common/_aside.scss
+++ b/src/scss/components/common/_aside.scss
@@ -2,6 +2,10 @@
 
 .aside {
   margin-bottom: 150px;
+  @include mq-tab {
+    width: calc(100% - 30px);
+    margin: 0px 20px 60px 20px;
+  }
   @include mq-sp {
     width: calc(100% - 30px);
     margin: 0px 20px 60px 20px;
@@ -21,6 +25,9 @@
       -ms-transform: translateX(-50%);
       transform: translate(-50%); /*位置調整*/
       background-color: $pale-gray;
+      @include mq-tab {
+        width: 100%;
+      }
       @include mq-sp {
         width: 100%;
       }
