--- a/src/scss/components/common/_contents-link-box.scss
+++ b/src/scss/components/common/_contents-link-box.scss
@@ -31,6 +31,9 @@
     margin-bottom: 15px;
     position: relative;
     background-color: #000;
+    @include mq-tab {
+      margin-bottom: 10px;
+    }
     @include mq-sp {
       margin-bottom: 10px;
     }
@@ -45,6 +48,11 @@
     margin:0;
     padding:0;
     z-index: 1;
+    @include mq-tab {
+      @include heading-m--sp;
+      color: #fff;
+      text-align: center;
+    }
     @include mq-sp {
       @include heading-m--sp;
       color: #fff;
@@ -57,6 +65,10 @@
   }
   &__contents-sumally {
     @include text-inner--pc;
+    @include mq-tab {
+      margin-bottom: 30px;
+      @include text-inner--sp;
+    }
     @include mq-sp {
       margin-bottom: 30px;
       @include text-inner--sp;
