--- a/src/scss/components/common/_detail-title.scss
+++ b/src/scss/components/common/_detail-title.scss
@@ -2,6 +2,9 @@
 
 .detail-title {
   margin-bottom: 100px;
+  @include mq-tab {
+    margin-bottom: 50px;
+  }
   @include mq-sp {
     margin-bottom: 50px;
   }
@@ -10,6 +13,9 @@
     padding: 50px 50px 50px 0px;
     border-right: 1px solid $dark-green;
     text-align: right;
+    @include mq-tab {
+      display: none;
+    }
     @include mq-sp {
       display: none;
     }
@@ -17,6 +23,11 @@
   &__heading {
     @include heading-l--pc;
     margin-bottom: 25px;
+    @include mq-tab {
+      @include heading-l--sp;
+      padding: 5px 0px 5px 20px;
+      border-left: 1px solid $dark-green;
+    }
     @include mq-sp {
       @include heading-l--sp;
       padding: 5px 0px 5px 20px;
