--- a/src/scss/components/common/_footer.scss
+++ b/src/scss/components/common/_footer.scss
@@ -3,6 +3,9 @@
 .footer {
   background-color: $dark-green;
   padding: 150px 9% 120px 9%;
+  @include mq-tab {
+    padding: 70px 60px 50px 60px;
+  }
   @include mq-sp {
     padding: 70px 60px 50px 60px;
   }
@@ -13,9 +16,15 @@
     img {
       width: 80px;
       opacity: .8;
+      @include mq-tab {
+        width: 70px;
+      }
       @include mq-sp {
         width: 70px;
       }
+    }
+    @include mq-tab {
+      padding-bottom: 100px;
     }
     @include mq-sp {
       padding-bottom: 100px;
@@ -32,6 +41,14 @@
     color: $dark-green;
     letter-spacing: 1px;
     text-transform: uppercase;
+    @include mq-tab {
+      position: static;
+      writing-mode: horizontal-tb;
+      font-size: 7px;
+      color: #fff;
+      letter-spacing: 0px;
+      text-align: center;
+    }
     @include mq-sp {
       position: static;
       writing-mode: horizontal-tb;
@@ -66,6 +83,9 @@
       text-decoration: none;
       color: $dark-green;
     }
+    @include mq-tab {
+      display: none;
+    }
     @include mq-sp {
       display: none;
     }
@@ -74,6 +94,16 @@
     position: fixed;
     bottom: 150px;
     right: 36px;
+    @include mq-tab {
+      position: static;
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      margin: 0 auto;
+      border-bottom: 1px solid #8E9A9A;
+      padding: 0 40px 60px 40px;
+      margin-bottom: 60px;
+    }
     @include mq-sp {
       position: static;
       display: flex;
@@ -89,6 +119,9 @@
     margin-bottom: 10px;
     width: 17px;
     display: block;
+    @include mq-tab {
+      filter: invert(88%) sepia(61%) saturate(0%) hue-rotate(229deg) brightness(107%) contrast(101%);
+    }
     @include mq-sp {
       filter: invert(88%) sepia(61%) saturate(0%) hue-rotate(229deg) brightness(107%) contrast(101%);
     }
