--- a/src/scss/components/common/_garden-link-box.scss
+++ b/src/scss/components/common/_garden-link-box.scss
@@ -2,6 +2,10 @@
 
 .garden-link-box {
   margin-bottom: 80px;
+  @include mq-tab {
+    width: 100%;
+    margin-bottom: 30px;
+  }
   @include mq-sp {
     width: 100%;
     margin-bottom: 30px;
@@ -10,6 +14,11 @@
     @include heading-m--pc;
     margin-bottom: 80px;
     padding-top: 150px;
+    @include mq-tab {
+      @include heading-m--sp;
+      margin-bottom: 40px;
+      padding-top: 60px;
+    }
     @include mq-sp {
       @include heading-m--sp;
       margin-bottom: 40px;
@@ -23,6 +32,13 @@
   &__list-wrapper {
     width: calc(100% / 3 - 50px / 3);
     margin-right: 25px;
+    @include mq-tab {
+      width: calc(100% / 2 - 10px);
+      margin-right: 20px;
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
+    }
     @include mq-sp {
       width: calc(100% / 2 - 10px);
       margin-right: 20px;
@@ -32,12 +48,18 @@
     }
     &:nth-child(3n) {
       margin-right: 0px;
+      @include mq-tab {
+        margin-right: 20px;
+      }
       @include mq-sp {
         margin-right: 20px;
       }
     }
     &:nth-child(6n) {
       margin-right: 0px;
+      @include mq-tab {
+        margin-right: 0px;
+      }
       @include mq-sp {
         margin-right: 0px;
       }
@@ -54,6 +76,9 @@
   &__garden-images {
     width: 100%;
     margin-bottom: 16px;
+    @include mq-tab {
+      margin-bottom: 14px;
+    }
     @include mq-sp {
       margin-bottom: 14px;
     }
@@ -61,12 +86,21 @@
   &__garden-name {
     @include heading-s--pc;
     margin-bottom: 8px;
+    @include mq-tab {
+      @include heading-s--sp;
+    }
     @include mq-sp {
       @include heading-s--sp;
     }
   }
   &__garden-address {
     @include text-inner--pc;
+    @include mq-tab {
+      @include text-small--sp;
+      margin-bottom: 4px;
+      margin-left: 1.4rem;
+      text-indent: -1.4rem;
+    }
     @include mq-sp {
       @include text-small--sp;
       margin-bottom: 4px;
@@ -88,6 +122,10 @@
   &__garden-phone-number {
     @include text-inner--pc;
     margin-bottom: 45px;
+    @include mq-tab {
+      @include text-small--sp;
+      margin-bottom: 30px;
+    }
     @include mq-sp {
       @include text-small--sp;
       margin-bottom: 30px;
