--- a/src/scss/components/common/_index-title.scss
+++ b/src/scss/components/common/_index-title.scss
@@ -4,6 +4,12 @@
   padding: 150px 0px 0px 50px;
   border-left: 1px solid $dark-green;
   margin-bottom: 150px;
+  @include mq-tab {
+    padding: 0px;
+    border-left: none;
+    margin-bottom: 50px;
+    text-align: center;
+  }
   @include mq-sp {
     padding: 0px;
     border-left: none;
@@ -13,6 +19,21 @@
   &__heading {
     @include heading-l--pc;
     margin-bottom: 25px;
+    @include mq-tab {
+      @include heading-xl--sp;
+      margin-bottom: 0px;
+      position: relative;
+      &::before {
+        content: '';
+        display: inline-block;
+        width: 40px;
+        height: 1px;
+        background: $dark-green;
+        position: absolute;
+        top: 50%;
+        left: -20px;
+      }
+    }
     @include mq-sp {
       @include heading-xl--sp;
       margin-bottom: 0px;
@@ -31,6 +52,9 @@
   }
   &__sumally {
     @include text-inner--pc;
+    @include mq-tab {
+      display: none;
+    }
     @include mq-sp {
       display: none;
     }
