--- a/src/scss/components/common/_pickup-title.scss
+++ b/src/scss/components/common/_pickup-title.scss
@@ -2,6 +2,9 @@
 
 .pickup-title {
   margin-bottom: 30px;
+  @include mq-tab {
+    display: none;
+  }
   @include mq-sp {
     display: none;
   }
@@ -10,6 +13,9 @@
     display: flex;
     justify-content: flex-end;
     margin-bottom: 100px;
+    @include mq-tab {
+      margin-bottom: 150px;
+    }
     @include mq-sp {
       margin-bottom: 150px;
     }
@@ -22,6 +28,13 @@
   &__title-inner {
     position:absolute;
     top: 23%;
+    @include mq-tab {
+      background-color: #fff;
+      padding: 40px;
+      top: 75%;
+      left: -20px;
+      width: 87%;
+    }
     @include mq-sp {
       background-color: #fff;
       padding: 40px;
@@ -33,6 +46,9 @@
   &__images-wrapper {
     right: 0px;
     width: 70%;
+    @include mq-tab {
+      width: 100%;
+    }
     @include mq-sp {
       width: 100%;
     }
@@ -40,12 +56,20 @@
   &__images--pc {
     width: 100%;
     height: auto;
+    @include mq-tab {
+      display: none;
+    }
     @include mq-sp {
       display: none;
     }
   }
   &__images--sp {
     display: none;
+    @include mq-tab {
+      display: inline;
+      width: 100vw;
+      margin-left: calc(((100vw - 100%) / 2) * -1);
+    }
     @include mq-sp {
       display: inline;
       width: 100vw;
@@ -57,6 +81,9 @@
     padding: 50px 50px 50px 0px;
     border-right: 1px solid $dark-green;
     text-align: right;
+    @include mq-tab {
+      display: none;
+    }
     @include mq-sp {
       display: none;
     }
@@ -64,12 +91,19 @@
   &__article-title {
     @include heading-l--pc;
     margin-bottom: 50px;
+    @include mq-tab {
+      @include heading-l--sp;
+      margin-bottom: 30px;
+    }
     @include mq-sp {
       @include heading-l--sp;
       margin-bottom: 30px;
     }
   }
   &__br--pc {
+    @include mq-tab {
+      display: none;
+    }
     @include mq-sp {
       display: none;
     }
@@ -77,6 +111,10 @@
   &__garden-name {
     @include heading-s--pc;
     margin-bottom: 25px;
+    @include mq-tab {
+      @include heading-s--sp;
+      margin-bottom: 0px;
+    }
     @include mq-sp {
       @include heading-s--sp;
       margin-bottom: 0px;
