--- a/src/scss/components/common/_product-link-box.scss
+++ b/src/scss/components/common/_product-link-box.scss
@@ -2,6 +2,10 @@
 
 .product-link-box {
   margin-bottom: 80px;
+  @include mq-tab {
+    width: 100%;
+    margin-bottom: 30px;
+  }
   @include mq-sp {
     width: 100%;
     margin-bottom: 30px;
@@ -10,6 +14,11 @@
     @include heading-m--pc;
     margin-bottom: 80px;
     padding-top: 150px;
+    @include mq-tab {
+      @include heading-m--sp;
+      margin-bottom: 40px;
+      padding-top: 60px;
+    }
     @include mq-sp {
       @include heading-m--sp;
       margin-bottom: 40px;
@@ -23,6 +32,13 @@
   &__list-wrapper {
     width: calc(100% / 4 - 60px / 4);
     margin-right: 20px;
+    @include mq-tab {
+      width: calc(100% / 2 - 10px);
+      margin-right: 20px;
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
+    }
     @include mq-sp {
       width: calc(100% / 2 - 10px);
       margin-right: 20px;
@@ -45,6 +61,9 @@
   &__product-images {
     width: 100%;
     margin-bottom: 16px;
+    @include mq-tab {
+      margin-bottom: 14px;
+    }
     @include mq-sp {
       margin-bottom: 14px;
     }
@@ -52,6 +71,9 @@
   &__product-name {
     @include heading-s--pc;
     margin-bottom: 8px;
+    @include mq-tab {
+      @include heading-s--sp;
+    }
     @include mq-sp {
       @include heading-s--sp;
     }
@@ -59,6 +81,10 @@
   &__product-price {
     @include text-inner--pc;
     margin-bottom: 45px;
+    @include mq-tab {
+      @include text-small--sp;
+      margin-bottom: 30px;
+    }
     @include mq-sp {
       @include text-small--sp;
       margin-bottom: 30px;
