update｜all｜tab版のカラム調整、フォントサイズをtab＝pcに調整

--- a/src/scss/components/common/_anker-link-box.scss
+++ b/src/scss/components/common/_anker-link-box.scss
@@ -42,7 +42,7 @@
     @include mq-tab {
       width: 100%;
       margin-bottom: 45px;
-      @include text-inner--sp;
+      @include text-normal--pc;
       margin-bottom: 15px;
     }
     @include mq-sp {
