--- a/src/scss/components/common/_article-left-image.scss
+++ b/src/scss/components/common/_article-left-image.scss
@@ -78,7 +78,7 @@
     margin-bottom: 40px;
     @include text-normal--pc;
     @include mq-tab {
-      @include text-normal--sp;
+      @include text-normal--pc;
       margin-bottom: 30px;
     }
     @include mq-sp {
