--- a/src/scss/components/common/_garden-link-box.scss
+++ b/src/scss/components/common/_garden-link-box.scss
@@ -15,7 +15,7 @@
     margin-bottom: 80px;
     padding-top: 150px;
     @include mq-tab {
-      @include heading-m--sp;
+      @include heading-m--pc;
       margin-bottom: 40px;
       padding-top: 60px;
     }
@@ -87,7 +87,7 @@
     @include heading-s--pc;
     margin-bottom: 8px;
     @include mq-tab {
-      @include heading-s--sp;
+      @include heading-s--pc;
     }
     @include mq-sp {
       @include heading-s--sp;
@@ -96,7 +96,7 @@
   &__garden-address {
     @include text-inner--pc;
     @include mq-tab {
-      @include text-small--sp;
+      @include text-inner--pc;
       margin-bottom: 4px;
       margin-left: 1.4rem;
       text-indent: -1.4rem;
@@ -123,7 +123,7 @@
     @include text-inner--pc;
     margin-bottom: 45px;
     @include mq-tab {
-      @include text-small--sp;
+      @include text-inner--pc;
       margin-bottom: 30px;
     }
     @include mq-sp {
