--- a/src/scss/components/common/_text-link-box.scss
+++ b/src/scss/components/common/_text-link-box.scss
@@ -4,10 +4,10 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 55px;
-  @include mq-tab {
-    width: 100%;
-    margin-bottom: 10px;
-  }
+  // @include mq-tab {
+  //   width: 100%;
+  //   margin-bottom: 10px;
+  // }
   @include mq-sp {
     width: 100%;
     margin-bottom: 10px;
@@ -19,8 +19,8 @@
     padding: 50px;
     margin-bottom: 25px;
     @include mq-tab {
-      width: 100%;
-      margin-right: 0px;
+      width : calc(100% / 2 - 20px / 2);
+      margin-right: 20px;
       padding: 35px 30px 25px 30px;
       &:nth-child(2n) {
         margin-right: 0px;
@@ -36,9 +36,9 @@
     }
     &:nth-child(3n) {
       margin-right: 0px;
-      // @include mq-sp {
-      //   margin-right: 20px;
-      // }
+      @include mq-tab {
+        margin-right: 20px;
+      }
     }
     &:nth-child(6n) {
       margin-right: 0px;
@@ -63,7 +63,7 @@
       }
     }
     @include mq-tab {
-      @include heading-s--sp;
+      @include heading-s--pc;
       margin-bottom: 15px;
     }
     @include mq-sp {
@@ -74,7 +74,7 @@
   &__article-sumally {
     @include text-inner--pc;
     @include mq-tab {
-      @include text-inner--sp;
+      @include text-inner--pc;
     }
     @include mq-sp {
       @include text-inner--sp;
