--- a/src/scss/components/common/_footer-link-area.scss
+++ b/src/scss/components/common/_footer-link-area.scss
@@ -42,8 +42,8 @@
       }
     }
     @include mq-tab {
-      @include heading-s--sp;
-      font-size: 12px;
+      @include heading-s--pc;
+      font-size: 14px;
       text-align: center;
     }
     @include mq-sp {
