--- a/src/scss/components/common/_pickup-title.scss
+++ b/src/scss/components/common/_pickup-title.scss
@@ -92,7 +92,7 @@
     @include heading-l--pc;
     margin-bottom: 50px;
     @include mq-tab {
-      @include heading-l--sp;
+      @include heading-l--pc;
       margin-bottom: 30px;
     }
     @include mq-sp {
@@ -112,7 +112,7 @@
     @include heading-s--pc;
     margin-bottom: 25px;
     @include mq-tab {
-      @include heading-s--sp;
+      @include heading-s--pc;
       margin-bottom: 0px;
     }
     @include mq-sp {
