update｜compne｜row-tableを追加

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,6 +33,7 @@
 @import "./components/common/contents";
 @import "./components/common/aside";
 @import "./components/common/breadcrumbs";
+@import "./components/common/row-table";
 
 .restest {
   width: 500px;
