--- a/src/scss/components/common/_people-title.scss
+++ b/src/scss/components/common/_people-title.scss
@@ -19,6 +19,9 @@
     @include mq-sp {
       margin-bottom: 150px;
     }
+    @media (max-width: 320px) {
+      margin-bottom: 200px;
+    }
   }
   &__title-wrapper {
     position:absolute;
