--- a/src/scss/components/common/_contents-link-box.scss
+++ b/src/scss/components/common/_contents-link-box.scss
@@ -48,6 +48,7 @@
     margin:0;
     padding:0;
     z-index: 1;
+    text-align: center;
     @include mq-tab {
       @include heading-m--pc;
       color: #fff;
@@ -72,6 +73,14 @@
     @include mq-sp {
       margin-bottom: 30px;
       @include text-inner--sp;
+    }
+  }
+  &__br {
+    @include mq-pc {
+      display: none;
+    }
+    @include mq-sp {
+      display: none;
     }
   }
 }
