--- a/src/scss/components/common/_people-link-box.scss
+++ b/src/scss/components/common/_people-link-box.scss
@@ -10,6 +10,10 @@
     width: 100%;
     margin-bottom: 30px;
   }
+  &__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+  }
   &__area-title {
     @include heading-m--pc;
     margin-bottom: 80px;
@@ -25,22 +29,19 @@
       padding-top: 60px;
     }
   }
-  &__wrapper {
-    display: flex;
-    flex-wrap: wrap;
-  }
   &__list-wrapper {
     width: calc(100% / 3 - 50px / 3);
     margin-right: 25px;
     @include mq-tab {
-      width: calc(100% / 2 - 10px);
+      width: calc(100% / 2 - 40px / 3);
       margin-right: 20px;
       &:nth-child(2n) {
         margin-right: 0px;
       }
     }
     @include mq-sp {
-      width: calc(100% / 2 - 10px);
+      width: calc(100% / 2 - 40px / 3);
+      // width: calc(100% / 2 - 10px);
       margin-right: 20px;
       &:nth-child(2n) {
         margin-right: 0px;
