--- a/src/scss/components/common/_contents-link-box.scss
+++ b/src/scss/components/common/_contents-link-box.scss
@@ -17,7 +17,7 @@
     }
   }
   &__box-wrapper {
-    width: calc(100% / 2 - 40px / 3);
+    width: calc(100% / 2 - 10px);
     margin-right: 20px;
     @include mq-sp {
       width: 100%;
