--- a/src/scss/components/common/_header.scss
+++ b/src/scss/components/common/_header.scss
@@ -4,27 +4,31 @@
   @include mq-tab {
     display: flex;
     width: 100%;
-    justify-content: center; /* 子要素を中央揃え */
+    justify-content: center;
     position: relative;
     padding: 40px 20px 40px 20px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    background-color: white;
+    margin-bottom: 50px;
+    border-bottom: 1px solid #eee;
   }
   @include mq-sp {
     display: flex;
     width: 100%;
-    justify-content: center; /* 子要素を中央揃え */
-    position: relative;
+    justify-content: center;
+    // position: relative;
     padding: 25px 20px 20px 20px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    background-color: white;
+    margin-bottom: 50px;
+    border-bottom: 1px solid #eee;
   }
-  // @include mq-sp {
-  //   display: flex;
-  //   width: 100%;
-  //   padding: 40px;
-  //   justify-content: center; /* 子要素を中央揃え */
-  //   position: relative;
-  //   @include mq-sp {
-  //     padding: 25px 20px 20px 20px;
-  //   }
-  // }
   &__site-logo {
     position: fixed;
     top: 20px;
