update｜xxx-linik-box--aside｜SP・Tabのindexは1カラムになるように修正

--- a/src/scss/components/common/_garden-link-box--aside.scss
+++ b/src/scss/components/common/_garden-link-box--aside.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.garden-link-box {
+.garden-link-box--aside {
   margin-bottom: 80px;
   @include mq-tab {
     width: 100%;
@@ -33,18 +33,36 @@
     width: calc(100% / 3 - 50px / 3);
     margin-right: 25px;
     @include mq-tab {
-      width: 100%;
-      margin-right: 0px;
+      width: calc(100% / 2 - 10px);
+      margin-right: 20px;
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
     }
     @include mq-sp {
-      width: 100%;
-      margin-right: 0px;
+      width: calc(100% / 2 - 10px);
+      margin-right: 20px;
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
     }
     &:nth-child(3n) {
       margin-right: 0px;
+      @include mq-tab {
+        margin-right: 20px;
+      }
+      @include mq-sp {
+        margin-right: 20px;
+      }
     }
     &:nth-child(6n) {
       margin-right: 0px;
+      @include mq-tab {
+        margin-right: 0px;
+      }
+      @include mq-sp {
+        margin-right: 0px;
+      }
     }
   }
   &__link-wrapper {
