--- a/src/scss/components/common/_people-link-box--aside.scss
+++ b/src/scss/components/common/_people-link-box--aside.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.garden-link-box {
+.people-link-box--aside {
   margin-bottom: 80px;
   @include mq-tab {
     width: 100%;
@@ -9,6 +9,10 @@
   @include mq-sp {
     width: 100%;
     margin-bottom: 30px;
+  }
+  &__wrapper {
+    display: flex;
+    flex-wrap: wrap;
   }
   &__area-title {
     @include heading-m--pc;
@@ -25,26 +29,41 @@
       padding-top: 60px;
     }
   }
-  &__wrapper {
-    display: flex;
-    flex-wrap: wrap;
-  }
   &__list-wrapper {
     width: calc(100% / 3 - 50px / 3);
     margin-right: 25px;
     @include mq-tab {
-      width: 100%;
-      margin-right: 0px;
+      width: calc(100% / 2 - 10px);
+      margin-right: 20px;
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
     }
     @include mq-sp {
-      width: 100%;
-      margin-right: 0px;
+      width: calc(100% / 2 - 10px);
+      // width: calc(100% / 2 - 10px);
+      margin-right: 20px;
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
     }
     &:nth-child(3n) {
       margin-right: 0px;
+      @include mq-tab {
+        margin-right: 20px;
+      }
+      @include mq-sp {
+        margin-right: 20px;
+      }
     }
     &:nth-child(6n) {
       margin-right: 0px;
+      @include mq-tab {
+        margin-right: 0px;
+      }
+      @include mq-sp {
+        margin-right: 0px;
+      }
     }
   }
   &__link-wrapper {
@@ -55,7 +74,7 @@
       text-decoration: underline transparent;
     }
   }
-  &__garden-images {
+  &__article-images {
     width: 100%;
     margin-bottom: 16px;
     @include mq-tab {
@@ -65,7 +84,7 @@
       margin-bottom: 14px;
     }
   }
-  &__garden-name {
+  &__article-title {
     @include heading-s--pc;
     margin-bottom: 8px;
     @include mq-tab {
@@ -75,33 +94,7 @@
       @include heading-s--sp;
     }
   }
-  &__garden-address {
-    @include text-inner--pc;
-    @include mq-tab {
-      @include text-inner--pc;
-      margin-bottom: 4px;
-      margin-left: 1.4rem;
-      text-indent: -1.4rem;
-    }
-    @include mq-sp {
-      @include text-small--sp;
-      margin-bottom: 4px;
-      margin-left: 1.4rem;
-      text-indent: -1.4rem;
-    }
-    &::before {
-      content: '';
-      display: inline-block;
-      width: 12px;
-      height: 16px;
-      margin-right: 8px;
-      background: url(https://placehold.jp/12x16.png) no-repeat center center;
-      background-size: cover;
-      position: relative;
-      top: 2px;
-    }
-  }
-  &__garden-phone-number {
+  &__garden-name {
     @include text-inner--pc;
     margin-bottom: 45px;
     @include mq-tab {
@@ -111,17 +104,6 @@
     @include mq-sp {
       @include text-small--sp;
       margin-bottom: 30px;
-    }
-    &::before {
-      content: '';
-      display: inline-block;
-      width: 12px;
-      height: 16px;
-      margin-right: 8px;
-      background: url(https://placehold.jp/12x16.png) no-repeat center center;
-      background-size: cover;
-      position: relative;
-      top: 2px;
     }
   }
 }
