--- a/src/scss/components/common/_people-link-box.scss
+++ b/src/scss/components/common/_people-link-box.scss
@@ -33,37 +33,18 @@
     width: calc(100% / 3 - 50px / 3);
     margin-right: 25px;
     @include mq-tab {
-      width: calc(100% / 2 - 10px);
-      margin-right: 20px;
-      &:nth-child(2n) {
-        margin-right: 0px;
-      }
+      width: 100%;
+      margin-right: 0px;
     }
     @include mq-sp {
-      width: calc(100% / 2 - 10px);
-      // width: calc(100% / 2 - 10px);
-      margin-right: 20px;
-      &:nth-child(2n) {
-        margin-right: 0px;
-      }
+      width: 100%;
+      margin-right: 0px;
     }
     &:nth-child(3n) {
       margin-right: 0px;
-      @include mq-tab {
-        margin-right: 20px;
-      }
-      @include mq-sp {
-        margin-right: 20px;
-      }
     }
     &:nth-child(6n) {
       margin-right: 0px;
-      @include mq-tab {
-        margin-right: 0px;
-      }
-      @include mq-sp {
-        margin-right: 0px;
-      }
     }
   }
   &__link-wrapper {
