--- a/src/scss/components/common/_product-link-box.scss
+++ b/src/scss/components/common/_product-link-box.scss
@@ -33,18 +33,12 @@
     width: calc(100% / 4 - 60px / 4);
     margin-right: 20px;
     @include mq-tab {
-      width: calc(100% / 2 - 10px);
-      margin-right: 20px;
-      &:nth-child(2n) {
-        margin-right: 0px;
-      }
+      width: 100%;
+      margin-right: 0px;
     }
     @include mq-sp {
-      width: calc(100% / 2 - 10px);
-      margin-right: 20px;
-      &:nth-child(2n) {
-        margin-right: 0px;
-      }
+      width: 100%;
+      margin-right: 0px;
     }
     &:nth-child(4n) {
       margin-right: 0px;
