fix｜header｜下線を削除

--- a/src/scss/components/common/_header.scss
+++ b/src/scss/components/common/_header.scss
@@ -13,7 +13,7 @@
     z-index: 5;
     background-color: white;
     margin-bottom: 50px;
-    border-bottom: 1px solid #eee;
+    // border-bottom: 1px solid #eee;
   }
   @include mq-sp {
     display: flex;
@@ -27,7 +27,7 @@
     z-index: 5;
     background-color: white;
     margin-bottom: 50px;
-    border-bottom: 1px solid #eee;
+    // border-bottom: 1px solid #eee;
   }
   &__site-logo {
     position: fixed;
