--- a/src/scss/components/common/_header.scss
+++ b/src/scss/components/common/_header.scss
@@ -60,8 +60,9 @@
     }
     @include mq-tab {
       position: absolute;
-      top: 42px;
-      right: 69px;
+      top: 43px;
+      right: 90px;
+      width: 30px;
       img {
         width: 90%;
       }
