--- a/src/scss/components/common/_contents.scss
+++ b/src/scss/components/common/_contents.scss
@@ -15,8 +15,10 @@
     position: relative;
     padding-bottom: 80px;
     @include mq-tab {
-      width: calc(100% - 40px);
-      margin: 0px 20px 0px 20px;
+      width: calc(100% - 80px);
+      margin: 0px 40px;
+      // width: calc(100% - 40px);
+      // margin: 0px 20px 0px 20px;
       padding-bottom: 50px;
     }
     @include mq-sp {
