fix｜content-link-box｜tab版のmargin-topを調整

--- a/src/scss/components/common/_contents-link-box.scss
+++ b/src/scss/components/common/_contents-link-box.scss
@@ -3,6 +3,10 @@
 .contents-link-box {
   margin-bottom: 80px;
   padding-top: 150px;
+  @include mq-tab {
+    margin-bottom: 30px;
+    padding-top: 60px;
+  }
   @include mq-sp {
     margin-bottom: 30px;
     padding-top: 60px;
