--- a/src/scss/components/common/_pickup-title.scss
+++ b/src/scss/components/common/_pickup-title.scss
@@ -14,10 +14,13 @@
     justify-content: flex-end;
     margin-bottom: 100px;
     @include mq-tab {
-      margin-bottom: 150px;
+      margin-bottom: 300px;
     }
     @include mq-sp {
-      margin-bottom: 150px;
+      margin-bottom: 250px;
+    }
+    @media (max-width: 320px) {
+      margin-bottom: 330px;
     }
   }
   &__title-wrapper {
@@ -110,14 +113,14 @@
   }
   &__garden-name {
     @include heading-s--pc;
-    margin-bottom: 25px;
+    margin-bottom: 100px;
     @include mq-tab {
       @include heading-s--pc;
-      margin-bottom: 0px;
+      margin-bottom: 50px;
     }
     @include mq-sp {
       @include heading-s--sp;
-      margin-bottom: 0px;
+      margin-bottom: 50px;
     }
   }
 }
