--- a/src/scss/components/parts/_button.scss
+++ b/src/scss/components/parts/_button.scss
@@ -1,1 +1,58 @@
 @charset "utf-8";
+
+.btn {
+  width: 17vw;
+  background-color: $bon-green;
+  border: 1px solid $bon-green;
+  transition:.2s;
+  @include mq-tab {
+    width: 70%;
+  }
+  @include mq-sp {
+    width: 100%;
+  }
+  &__pickup-title {
+    a {
+      @include heading-s--pc;
+      text-transform: uppercase;
+      text-align: center;
+      color: #fff;
+      font-size: 14px;
+      letter-spacing: 0.5em;
+      text-decoration: none;
+      display: inline-block;
+      padding: 25px 0px 22px 0px;
+      width: 100%;
+      height: 100%;
+      transition:.2s;
+      @include mq-tab {
+        letter-spacing: 0.2em;
+        padding: 23px 0px 20px 0px;
+      }
+      @include mq-sp {
+        letter-spacing: 0.2em;
+        padding: 15px 0px 14px 0px;
+        font-size: 12px;
+      }
+      &:hover {
+        color: $bon-green;
+      }
+    }
+    // &::after {
+    //   content: '';
+    //   display: inline-block;
+    //   width: 16px;
+    //   height: 9px;
+    //   float: right;
+    //   background: url(../../dist/images/common/icn_arrow-w.svg) no-repeat;
+    //   background-size: contain;
+    //   position: relative;
+    //   top: -42px;
+    //   right: 18px;
+    // }
+  }
+  &:hover {
+    background-color: #fff;
+    border: 1px solid $bon-green;
+  }
+}
