--- a/src/scss/components/parts/_button.scss
+++ b/src/scss/components/parts/_button.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.btn {
+.primary-btn {
   width: 17vw;
   background-color: $bon-green;
   border: 1px solid $bon-green;
@@ -55,4 +55,7 @@
     background-color: #fff;
     border: 1px solid $bon-green;
   }
+}
+.secondary-btn {
+  
 }
