add｜article-garden-link｜新しく追加

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import "./components/common/article-image";
 @import "./components/common/article-accent-image";
 @import "./components/common/article-quote";
+@import "./components/common/article-garden-link";
 @import "./components/common/text-link-box";
 @import "./components/common/anker-link-box";
 @import "./components/common/list-link-box";
