--- a/src/scss/components/parts/_button.scss
+++ b/src/scss/components/parts/_button.scss
@@ -57,5 +57,23 @@
   }
 }
 .secondary-btn {
-  
+  border: 1px solid $pale-gray;
+  padding: 30px;
+  margin-bottom: 80px;
+  text-align: center;
+  @include mq-tab {
+    padding: 40px;
+    margin-bottom: 30px;
+  }
+  @include mq-sp {
+    padding: 20px;
+    margin-bottom: 30px;
+  }
+  a {
+    @include text-normal--pc;
+    transition:.1s;
+    &:hover {
+      text-decoration: underline transparent;
+    }
+  }
 }
