--- a/src/scss/components/common/_breadcrumbs.scss
+++ b/src/scss/components/common/_breadcrumbs.scss
@@ -1,7 +1,9 @@
 @charset "utf-8";
 
 .breadcrumbs {
+  display: flex;
   margin-bottom: 30px;
+  justify-content: center;
   @include mq-tab {
     display: none;
   }
@@ -18,6 +20,13 @@
       &:hover {
         text-decoration: underline transparent;
       }
+    }
+    &::after {
+      margin: 0px 9px 0px 10px;
+      content: '>';
+    }
+    &:last-child::after {
+      content: none;
     }
   }
 }
