fix｜contents.scss｜width: 100%をautoに変更

--- a/src/scss/components/common/_contents.scss
+++ b/src/scss/components/common/_contents.scss
@@ -4,11 +4,11 @@
   width: calc(100% - 90px);
   border-right: 1px solid $pale-gray;
   @include mq-tab {
-    width: 100%;
+    width: auto;
     border-right: none;
   }
   @include mq-sp {
-    width: 100%;
+    width: auto;
     border-right: none;
   }
   &__article-wrapper {
